statement of fact overflow horizontal fixed

--- a/applicationForm/static/applicationForm/css/formStyles.css
+++ b/applicationForm/static/applicationForm/css/formStyles.css
@@ -202,7 +202,3 @@ textarea {
   width: 20vw;
 }
 
-
-#stofFacts {
-  white-space: pre;
-}
